--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
-    "dependencies": {
-        "console.table": "^0.10.0",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "inquirer": "^8.2.4",
-        "mysql2": "^3.1.2"
-    }
+  "name": "employee-manager",
+  "version": "1.0.0",
+  "description": "Easily keep track of your employees",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kthlnt/Employee-Manager.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kthlnt/Employee-Manager/issues"
+  },
+  "homepage": "https://github.com/kthlnt/Employee-Manager#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.1.2"
+  }
 }
